# reconciliation-agent

./: .env.example  .gitignore  README.md  docker-compose.yml  start.sh
db/migrations/: 0001_init.sql  0002_matches_reviews.sql
docs/: PRD.md  PROJECT_CONTEXT.md  STATUS.md
docs/decisions/: 0001-record-architecture-decisions.md  0002-polyglot-typescript-python.md  0003-postgresql-single-instance.md  0004-no-vector-store.md  0005-deterministic-core-ai-at-boundary.md  0006-graceful-degradation.md  0007-independent-database.md  README.md
services/agent/: .dockerignore  .env.example  Dockerfile  pyproject.toml
services/agent/app/: config.py  main.py
services/agent/app/api/: routes.py
services/agent/app/domain/: models.py
services/agent/app/reasoning/: explainer.py  prompts.py
services/agent/app/reasoning/providers/: __init__.py  anthropic_provider.py  base.py  factory.py  gemini_provider.py  heuristic_provider.py
services/agent/resolution_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/core/: .env.example  package-lock.json  package.json  seed-manifest.json  tsconfig.json
services/core/src/: main.ts  seed.ts
services/core/src/infrastructure/: config.ts  container.ts  queue.ts
services/web/: .env.example  Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
services/web/.next/: app-build-manifest.json  prerender-manifest.json  trace
services/web/.next/cache/: .rscinfo
services/web/.next/server/: app-paths-manifest.json  server-reference-manifest.json  webpack-runtime.js
(+105 files in other folders)
