[project]
name = "resolution-agent"
version = "0.1.0"
description = "AI reasoning sidecar for Resolution AI. Explains unmatched items only."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "pydantic>=2.7",
    "anthropic>=0.34",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
